fix letter spacing

--- a/m1/w3/d5/Progetto_finale/assets/css/style.css
+++ b/m1/w3/d5/Progetto_finale/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     text-align: center;
     display: inline-block;
     margin-top: 10px;
+    letter-spacing: -2px;
 }
 
 .container {
@@ -318,10 +319,14 @@ button:active {
         background: linear-gradient(180deg, rgba(173, 255, 47, 1) 0%, rgba(173, 255, 47, 1) 58%, rgba(145, 214, 39, 1) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#adff2f", endColorstr="#91d627", GradientType=1);
         resize: none;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 0.9rem;
+        padding: 10px;
     }
 
     #memo-input:hover {
-        transform: scale(1.1);
+        transform: scale(1.2);
         border: 2px solid rgb(124, 184, 33);
+        box-shadow: 0 0 80px rgb(63, 63, 63);
     }
 }
